--- a/src/ZstdSharp.Benchmark/ZstdSharp.Benchmark.csproj
+++ b/src/ZstdSharp.Benchmark/ZstdSharp.Benchmark.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0;net461</TargetFrameworks>
     <LangVersion>9.0</LangVersion>
     <TieredCompilation>false</TieredCompilation>
   </PropertyGroup>
