Added some tests

--- a/src/ZstdSharp.Test/ZstdSharp.Test.csproj
+++ b/src/ZstdSharp.Test/ZstdSharp.Test.csproj
@@ -33,4 +33,10 @@
     <ProjectReference Include="..\ZstdSharp\ZstdSharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="golden-compression\PR-3517-block-splitter-corruption-test">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
