--- a/src/ZstdSharp.Benchmark/ZstdSharp.Benchmark.csproj
+++ b/src/ZstdSharp.Benchmark/ZstdSharp.Benchmark.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net462;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0;net462;net7.0;net8.0;net9.0</TargetFrameworks>
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
