Added x86 libzstd to Zstd.Extern project

--- a/src/Zstd.Extern/Zstd.Extern.csproj
+++ b/src/Zstd.Extern/Zstd.Extern.csproj
@@ -9,7 +9,10 @@
     <None Update="dickens">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="libzstd.dll">
+    <None Update="x86\libzstd.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="x64\libzstd.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
