--- a/src/Zstd.Extern/Zstd.Extern.csproj
+++ b/src/Zstd.Extern/Zstd.Extern.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0;netstandard2.0;net462</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0;net10.0;netstandard2.0;net462</TargetFrameworks>
     <LangVersion>9</LangVersion>
   </PropertyGroup>
 
@@ -13,6 +13,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="x64\libzstd.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="arm64\libzstd.dylib">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
